# foyer

./: .env.deployment.example  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  composer.json  package-lock.json  package.json  phpunit.xml
.github/workflows/: ci.yml
app/Jobs/: DispatchAgentTurn.php  ProvisionTwilioNumber.php  ReconcileCalendarDrift.php  SendOutboundSms.php
app/Models/: AuditLog.php  Booking.php  Business.php  ConsentChange.php  ConsentState.php  Conversation.php  IdempotencyKey.php  LlmCostDaily.php  Message.php  MessageDelivery.php  OutOfScopeLog.php  PhoneNumber.php  ServiceType.php  SlotHold.php  User.php  WebSession.php
app/Policies/: BusinessPolicy.php
app/Providers/: AppServiceProvider.php  HorizonServiceProvider.php
app/Services/: ConsentStateMachine.php  GeocodingService.php  PhoneNormalizer.php  QuietHoursService.php  (+2 more)
bootstrap/: app.php
config/: database.php  foyer.php  horizon.php  sentry.php  services.php
routes/: api.php  console.php
web/: README.md  deploy.config.js  package-lock.json  package.json
widget/: .gitignore  README.md  build.mjs  index.html  package-lock.json  package.json  size-check.mjs  tsconfig.json
workers/agent/: README.md  app.py  contracts.py  cost.py  internal_api.py  llm_adapter.py  prompts.py  pyproject.toml  state_machine.py
workers/agent/supervisord/: foyer-agent-worker.conf
workers/agent/tests/: _fakes.py  conftest.py  test_cost_ceiling.py  test_internal_api_hmac.py  test_scope_guard.py  test_state_machine.py  test_state_machine_invariants.py  test_structured_output.py
(+121 files in other folders)
