[project]
name = "foyer-agent-worker"
version = "0.1.0"
description = "Foyer FastAPI agent worker — LLM orchestration, structured-output state machine, cost ceiling."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
    "structlog>=24.1",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.34",
]
openai = [
    "openai>=1.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "app.py",
    "state_machine.py",
    "contracts.py",
    "prompts.py",
    "llm_adapter.py",
    "internal_api.py",
    "cost.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_unimported = true
